k8s/backend.yaml
#backend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: diplomathesisorchestratedjp.azurecr.io/backend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
#backend service
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
